# blurosiere-backend

./: .env  .env.example  .gitignore  Dockerfile  FRONTEND_INTEGRATION.md  IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  README.md  TESTE_ATIVIDADE.md  TESTING.md  app.py  blurosiere.db  config.py  constants.py  docker-compose.yml  json.txt  main.py  migrate_db.py  pyproject.toml  render.yaml  requirements.txt  run_tests.py  seed_data.py  test.py  test_complete.py  test_fixed.py  utils.py
core/: database.py
docs/: EMAIL_API.md
models/: models.py
routers/: analytics.py  appointments.py  auth.py  chat.py  contact.py  dashboard.py  email.py  export.py  ml_analysis.py  notifications.py  patient.py  patients.py  psychologists.py  reports.py  requests.py  schedule.py  search.py  upload.py  websocket.py
schemas/: advanced_schemas.py  schemas.py
services/: ai_service.py  auth_services.py  email_service.py  ml_service.py  notification_service.py  report_service.py  sms_service.py  storage_service.py  websocket_manager.py
tests/: test_auth.py  test_endpoints.py
